--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 site: Ultra
 url: https://example.com
-title: Ultra
+title: "LING 270"
 description: "Language, Technology, & Society"
 twitter:
   username: yourusername
