--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -1,8 +1,13 @@
 -
   module: "0"
   week: "1"
-  date: "2020-08-25 15:00 CDT"
+  date: "2020-08-24 15:00 CDT"
   title: "Syllabus"
+  reading:
+    -
+     title: "Quiz 0a"
+-
+  date: "2020-08-25 15:00 CDT"
   reading:
     -
      title: "Video playlist"
@@ -61,7 +66,7 @@
     -
      title: "Reading log"
     -
-     title: "Quiz 0"
+     title: "Quiz 0b"
 -
   module: "1"
   week: "1"
