--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -6,6 +6,7 @@
   reading:
     -
      title: "Quiz 0a"
+     url: "https://prairielearn.engr.illinois.edu/pl/course_instance/85223/assessment_instance/1670639"
 -
   date: "2020-08-25 15:00 CDT"
   reading:
@@ -67,6 +68,7 @@
      title: "Reading log"
     -
      title: "Quiz 0b"
+     url: "https://prairielearn.engr.illinois.edu/pl/course_instance/85223/assessment_instance/1670192/"
 -
   module: "1"
   week: "1"
