--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -112,7 +112,7 @@
        value: 21
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 1b"
      url: "https://prairielearn.engr.illinois.edu/pl/course_instance/85223/assessment/2304939/"
     -
      title: "Quiz 1b"
@@ -135,7 +135,7 @@
        value: 21
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 2a"
     -
      title: "Quiz 2a"
 -
@@ -155,7 +155,7 @@
        value: 25
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 2b"
     -
      title: "Quiz 2b"
 -
@@ -182,7 +182,7 @@
        value: 36
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 3"
     -
      title: "Quiz 3"
 -
@@ -211,7 +211,7 @@
        value: 10
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 4"
     -
      title: "Quiz 4"
 -
@@ -238,7 +238,7 @@
        value: 29
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 5"
     -
      title: "Quiz 5"
 -
@@ -273,7 +273,7 @@
        value: "90"
        unit: "minutes"
     -
-     title: "Reading log"
+     title: "Reading log 6"
     -
      title: "Quiz 6"
 -
@@ -301,7 +301,7 @@
        value: 46
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 7"
     -
      title: "Quiz 7"
 -
@@ -323,7 +323,7 @@
        value: 28
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 8a"
     -
      title: "Quiz 8a"
 -
@@ -345,7 +345,7 @@
     -
      title: "Quiz 8b"
     -
-     title: "Reading log"
+     title: "Reading log 8b"
 -
   date: "2020-11-20 15:00 CST"
   reading:
@@ -373,7 +373,7 @@
        value: 14
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 9a"
     -
      title: "Quiz 9a"
 -
@@ -389,7 +389,7 @@
        value: 3
        unit: "pages"
     -
-     title: "Reading log"
+     title: "Reading log 9b"
     -
      title: "Quiz 9b"
 -
