--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -94,6 +94,7 @@
      url: "https://prairielearn.engr.illinois.edu/pl/course_instance/85223/assessment/2304937/"
     -
      title: "Quiz 1a"
+     url:   "https://prairielearn.engr.illinois.edu/pl/course_instance/85223/assessments"
 -
   week: "2"
   date: "2020-09-04 15:00 CDT"
