--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -117,6 +117,7 @@
      url: "https://prairielearn.engr.illinois.edu/pl/course_instance/85223/assessment/2304939/"
     -
      title: "Quiz 1b"
+     url: "https://prairielearn.engr.illinois.edu"
 -
   module: "2"
   week: "3"
