--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -140,6 +140,7 @@
      title: "Reading log 2a"
     -
      title: "Quiz 2a"
+     url: "https://prairielearn.engr.illinois.edu"
 -
   week: "4"
   date: "2020-09-18 15:00 CDT"
@@ -160,6 +161,7 @@
      title: "Reading log 2b"
     -
      title: "Quiz 2b"
+     url: "https://prairielearn.engr.illinois.edu"
 -
   date: "2020-09-18 15:00 CDT"
   reading:
