--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -131,7 +131,11 @@
        value: "85"
        unit: "minutes"
     -
-     title: "Video playlist (part 2 will be posted on Wed Sep 8) "
+     title: "Video playlist (part 2) "
+     url:   "https://www.youtube.com/playlist?list=PLydysiDoFy5VipwO12eoGC1Nwd9PTTsGL"
+     length:
+       value: "83"
+       unit: "minutes"
     -
      author: Sproat
      title: "Chapter 3 - 3.2"
@@ -144,9 +148,10 @@
   date: "2020-09-18 15:00 CDT"
   reading:
     -
-     title: "Video playlist"
+     title: "An Animated History of Writing"
+     url:   "https://www.youtube.com/playlist?list=PLc4s09N3L2h3HtaAYVqOVKGt2h6wRasw2"
      length:
-       value: "180"
+       value: "97"
        unit: "minutes"
     -
      author: Sproat
@@ -156,9 +161,7 @@
        value: 25
        unit: "pages"
     -
-     title: "Reading log 2a (will be posted on Wed Sep 8)"
-    -
-     title: "Reading log 2b (will be posted on Wed Sep 8)"
+     title: "Reading log 2"
     -
      title: "Quiz 2a"
      url: "https://prairielearn.engr.illinois.edu"
