--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -202,6 +202,7 @@
      title: "Reading log 3"
     -
      title: "Quiz 3"
+     url: "https://prairielearn.engr.illinois.edu"
 -
   module: "4"
   week: "6-7"
