--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -200,6 +200,7 @@
        unit: "pages"
     -
      title: "Reading log 3"
+     url: "https://prairielearn.engr.illinois.edu"
     -
      title: "Quiz 3"
      url: "https://prairielearn.engr.illinois.edu"
