--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -183,7 +183,7 @@
 -
   module: "3"
   week: "5-6"
-  date: "2020-09-30 15:00 CDT"
+  date: "2020-09-30 23:59 CDT"
   title: "Decipherment"
   reading:
     -
@@ -206,22 +206,20 @@
        value: 36
        unit: "pages"
     -
-     title: "Reading log 3"
-     url: "https://prairielearn.engr.illinois.edu"
-    -
      title: "Quiz 3"
+     url: "https://prairielearn.engr.illinois.edu"
+-
+  date: "2020-10-02 23:59 CDT"
+  reading:
+    -
+     title: "Reading log 3"
      url: "https://prairielearn.engr.illinois.edu"
 -
   module: "4"
   week: "6-7"
-  date: "2020-10-07 15:00 CDT"
+  date: "2020-10-07 23:59 CDT"
   title: "The Invention of Printing"
   reading:
-    -
-     title: "Video playlist"
-     length:
-       value: "180"
-       unit: "minutes"
     -
      author: Wikipedia
      title: "Printing Press"
@@ -237,18 +235,25 @@
        value: 10
        unit: "pages"
     -
+     title: "Video: Gutenberg Printing Press documentary"
+     url:   "https://youtu.be/uQ88yC35NjI"
+     length:
+       value: "59"
+       unit: "minutes"
+    -
      title: "Reading log 4"
     -
      title: "Quiz 4"
+     url: "https://prairielearn.engr.illinois.edu"
 -
-  date: "2020-10-12 15:00 CDT"
+  date: "2020-10-12 23:59 CDT"
   reading:
     -
      title: "Homework 2"
 -
   module: "5"
   week: "7-8"
-  date: "2020-10-14 15:00 CDT"
+  date: "2020-10-14 23:59 CDT"
   title: "Writing, Literacy, & Society"
   reading:
     -
@@ -268,7 +273,7 @@
     -
      title: "Quiz 5"
 -
-  date: "2020-10-19 15:00 CDT"
+  date: "2020-10-19 23:59 CDT"
   module: "1-5"
   week: "9"
   reading:
@@ -277,7 +282,7 @@
 -
   module: "6"
   week: "9-10"
-  date: "2020-10-27 15:00 CDT"
+  date: "2020-10-27 23:59 CDT"
   title: "Artificial Intelligence"
   reading:   
     -
@@ -304,14 +309,14 @@
      title: "Quiz 6"
 -
   week: "10"
-  date: "2020-10-30 15:00 CDT"
+  date: "2020-10-30 23:59 CDT"
   reading:
     -
      title: "Homework 3"
 -
   module: "7"
   week: "10-11"
-  date: "2020-11-06 15:00 CST"
+  date: "2020-11-06 23:59 CST"
   title: "Precursors to Language Computing"
   reading:
     -
@@ -333,7 +338,7 @@
 -
   module: "8"
   week: "12"
-  date: "2020-11-13 15:00 CST"
+  date: "2020-11-13 23:59 CST"
   title: "Modern Language Technology"
   reading:
     -
@@ -354,7 +359,7 @@
      title: "Quiz 8a"
 -
   week: "13"
-  date: "2020-11-20 15:00 CST"
+  date: "2020-11-20 23:59 CST"
   reading:
     -
      title: "Video playlist"
@@ -373,7 +378,7 @@
     -
      title: "Reading log 8b"
 -
-  date: "2020-11-20 15:00 CST"
+  date: "2020-11-20 23:59 CST"
   reading:
     -
      title: "Homework 4"
@@ -383,7 +388,7 @@
 -
   module: "9"
   week: "15"
-  date: "2020-12-04 15:00 CST"
+  date: "2020-12-04 23:59 CST"
   title: "Language and the Internet"
   reading:
     -
@@ -405,7 +410,7 @@
 -
   module: "9"
   week: "16"
-  date: "2020-12-09 15:00 CST"
+  date: "2020-12-09 23:59 CST"
   reading:
     -
      author: Sproat
@@ -419,7 +424,7 @@
     -
      title: "Quiz 9b"
 -
-  date: "2020-12-11 15:00 CDT"
+  date: "2020-12-11 23:59 CDT"
   reading:
     -
      title: "Final project"
