--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -372,9 +372,14 @@
      title: "Reading log 8a"
     -
      title: "Quiz 8a"
+     
 -
   week: "14"
-  date: "2020-11-27 23:59 CST"
+  module: ""
+  title: "<i>Thanksgiving Break</i>"
+-
+  week: "15"
+  date: "2020-12-04 23:59 CST"
   reading:
     -
      title: "Video playlist"
@@ -392,18 +397,13 @@
      title: "Quiz 8b"
     -
      title: "Reading log 8b"
--
-  date: "2020-11-20 23:59 CST"
-  reading:
     -
      title: "Homework 4"
--
-  week: "14"
-  title: "<i>Thanksgiving Break</i>"
+
 -
   module: "9"
-  week: "15"
-  date: "2020-12-04 23:59 CST"
+  week: "16"
+  date: "2020-12-09 23:59 CST"
   title: "Language and the Internet"
   reading:
     -
@@ -419,15 +419,6 @@
        value: 14
        unit: "pages"
     -
-     title: "Reading log 9a"
-    -
-     title: "Quiz 9a"
--
-  module: "9"
-  week: "16"
-  date: "2020-12-09 23:59 CST"
-  reading:
-    -
      author: Sproat
      title: "Chapter 10"
      pages: "256-258"
@@ -435,9 +426,9 @@
        value: 3
        unit: "pages"
     -
-     title: "Reading log 9b"
+     title: "Reading log 9"
     -
-     title: "Quiz 9b"
+     title: "Quiz 9"
 -
   date: "2020-12-11 23:59 CDT"
   reading:
