adding link to module 7 videos

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -334,6 +334,7 @@
   reading:
     -
      title: "Video playlist"
+     url: "https://www.youtube.com/watch?v=-ZZTkASKkYE&list=PLrFhPxATm4Hz22YckBBRphXqtkiHSItm3"
      length:
        value: "210"
        unit: "minutes"
